Add saving rolic to DB OK

--- a/static/index.html
+++ b/static/index.html
@@ -203,7 +203,7 @@
             <div id = "x6" class = "contentOfMenu" hidden>
                 Последний кадр
                 <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "q6_t1" value = "799">
-                <button class = "btn" id = "q6_b1">Просмотр ролика</button>
+                <button class = "btn" id = "q6_b1">Сохранение и просмотр ролика</button>
             </div>
 
             <div id = "b1" class = "menuElementClass">Свойства ролика</div>
